# er2_src

./: .gitignore
drivers/: Makefile  er2.h  er2_core.c  er2_signal.c
general/: er_errors.h  gpio.c  gpio.h
hmc5883l/: Makefile  hmc5883l_calibration.c  hmc5883l_test.c
includes/: liber_tools.h  libmachine.h  librpi_peri.h
mma7455l/: main.c  mma7455.py  move.c
projects/er_tools/: recipe.json
projects/er_tools/logs/: ert_log.c  ert_log.h
projects/machine/: er2_machine.c  er2_machine.h  er2_wheels.c  er2_wheels.h  recipe.json
projects/machine_test/: main.c  recipe.json
projects/rpi_periph/: recipe.json  rpp_595.c  rpp_595.h  rpp_base.c  rpp_base.h  rpp_gpio.c  rpp_gpio.h  rpp_pwm.c  rpp_pwm.h
projects/server/: er_server.c  er_server.service
projects/server/content/: index.html
projects/wheels/: diagnostics.c  diagnostics.h  er_errors.h  machine_control.h  test.c
run/: test.sh
sensors/: CMakeLists.txt  hmc5883l.c  hmc5883l.h  test.c  test_angl_rot.c  test_log.c
server/: CMakeLists.txt  er_server.c  er_stream  er_video  er_video.service  get_dbm  get_dbm.sh  say
server/content/: index.css  index.html  main.js
server/content/img/: favicon.png~
signal/: CMakeLists.txt  er_signal.c  er_signal.h  test.c
wheels/: CMakeLists.txt  Doxyfile  diagnostics.c  er_errors.h  machine_control.c  machine_control.h  test.c  wheels.c  wheels.h
